<resources>
    <string name="app_name">Meeting Minutes</string>
    <string name="register_label">Register</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="invalid_data">Invalid Data!</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="name_hint">Name</string>
    <string name="to_add_notes">To add notes</string>
    <string name="sort_by">Sort By</string>
    <string name="log_out">Log Out</string>
    <string name="delete_message">Are you sure you want to delete %s?</string>
    <string name="delete_title">Delete Note</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="no_sort_order">No sort</string>
    <string name="sort_by_list">List View</string>
    <string name="sort_by_grid">Grid View</string>
    <string name="apply_sort_order_text">Apply Sort Order</string>
    <string name="sort_options_title">Sort Options</string>
</resources>